--- a/style.css
+++ b/style.css
@@ -154,7 +154,36 @@ h1 {
   font-family: poppins;
   text-align: center;
 }
+/* ---------- Tema sider tekst---------------------- */
 
+/* --- Hvid baggrund eunder tekst */
+.hvid_baggrund {
+  background-color: white;
+  width: 100%;
+  padding: 1rem 0 5rem 0;
+}
+
+/* --- div rundt om overskrift og teksten ---*/
+.emnesite_tekst_og_border {
+  /* blå border */
+  border-left: solid var(--farve2) 10px;
+  padding: 0 0 0 1.5rem;
+  max-width: 900px;
+  margin-inline: auto;
+}
+
+/* --- tekst overskriften --- */
+.emnesite_overskrift {
+  font-family: poppins;
+  font-size: 1.5rem;
+  margin: 0 0 0.5rem 0;
+}
+
+/* --- selve brødteksten --- */
+.emnesite_tekst p {
+  font-family: mulish;
+  line-height: 1.5;
+}
 /*----------------- Mobil -----------------------*/
 @media (max-width: 600px) {
   /*------- forside -------*/
@@ -253,7 +282,14 @@ h1 {
   /* ----- H1 ------ */
   h1 {
     font-size: 8rem;
-    margin-bottom: 7rem;
+    margin-bottom: 2.5rem;
+  }
+  /* tema tekst grid */
+  .emnesite_tekst {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+    max-width: 900px;
   }
 
   /* .vaelg_tema {
@@ -283,47 +319,45 @@ h1 {
 
     /* max-width: 900px; */
 
-/* Test af emnesite tekst */
+/* proces og løsning og knap */
 
-.usynlig_baggrund_til_pile {
-  position: relative;
-  padding: 2rem 0 2rem 0;
+.loesning_container {
+  max-width: 500px;
+  padding: 0 1.5rem 0 0;
+  border-right: solid 10px var(--farve2);
+}
+.loesning_container h2 {
+  font-size: 2rem;
+  text-align: right;
 }
 
-.hvid_baggrund {
-  background-color: white;
+.proces_container {
+  max-width: 500px;
+}
+
+.proces_container img {
+  max-width: 500px;
+}
+
+.knap a {
+  font-family: poppins;
+  color: black;
+  text-decoration: none;
+  padding: 1.5rem;
+}
+
+.knap {
+  display: grid;
+  place-content: center;
+  margin: 0 0 1rem 0;
   width: 100%;
-  /* position: relative; */
+  border: solid 6px black;
 }
 
-/* .emnesite_tekst {
-  max-width: 500px;
-} */
-.emnesite_hele_teks_del {
+.proces_loesning_grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   margin-inline: auto;
-  max-width: 500px;
-  /* så tekst er "bestykket", pile ikke rammer */
-  padding: 3rem 1rem 3rem 1rem;
-}
-
-.emnesite_blae_border {
-  /* blå border */
-  border-left: solid var(--farve2) 10px;
-  padding: 0 0 0 1rem;
-}
-
-.pil_absolute1 {
-  position: absolute;
-  /* aspect-ratio: 1/1; */
-  width: 10%;
-  top: 0;
-  left: 0;
-}
-
-.pil_absolute2 {
-  position: absolute;
-  /* aspect-ratio: 1/1; */
-  width: 10%;
-  top: 90%;
-  left: 90%;
+  gap: 80px;
+  max-width: 1080px;
 }
