--- a/style.css
+++ b/style.css
@@ -101,6 +101,12 @@ footer p {
   text-align: center;
 }
 
+/* om mig forside */
+#ommig_tekst_mindre {
+  font-size: 3.5rem;
+  padding: 0 0 3.84px 0;
+}
+
 /*  tema linket er blot sort  */
 .vaelg_tema a {
   text-decoration: none;
@@ -282,7 +288,7 @@ h1 {
   /* ----- H1 ------ */
   h1 {
     font-size: 8rem;
-    margin-bottom: 2.5rem;
+    margin-bottom: 1.5rem;
   }
   /* tema tekst grid */
   .emnesite_tekst {
@@ -360,4 +366,20 @@ h1 {
   margin-inline: auto;
   gap: 80px;
   max-width: 1080px;
+}
+
+/* test af proces grid */
+@media (min-width: 600px) {
+  .proces_grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 3rem;
+  }
+}
+
+.proces_grid p {
+  font-size: 1.5rem;
+  font-family: poppins;
+  padding: 0 0 0 1rem;
+  border-left: solid 10px var(--farve2);
 }
