--- a/menu.css
+++ b/menu.css
@@ -123,7 +123,7 @@ header li {
 
 .nav_tema {
   font-family: poppins;
-  font-size: 1.2;
+  font-size: 1.2rem; /*er dette rigtigt, ellers slet*/
 }
 
 header li {
@@ -158,7 +158,7 @@ header li {
 .logo_navn a {
   font-family: mulish;
   font-weight: 700;
-  font-size: 2rem;
+  font-size: 2.5rem;
   text-decoration: none;
   color: black;
   place-self: center;
@@ -167,5 +167,4 @@ header li {
 .logo_navn span {
   color: var(--farve2);
   font-weight: 900;
-  font-size: 2.5rem;
 }
