--- a/style.css
+++ b/style.css
@@ -435,6 +435,36 @@ h1 {
   .order10 {
     order: 10;
   }
+  .order11 {
+    order: 11;
+  }
+  .order12 {
+    order: 12;
+  }
+  .order13 {
+    order: 13;
+  }
+  .order14 {
+    order: 14;
+  }
+  .order15 {
+    order: 15;
+  }
+  .order16 {
+    order: 16;
+  }
+  .order17 {
+    order: 17;
+  }
+  .order18 {
+    order: 18;
+  }
+  .order19 {
+    order: 19;
+  }
+  .order20 {
+    order: 20;
+  }
 }
 
 /*----------------- Tablet -----------------------*/
